--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
   <script type="application/javascript" charset="utf-8" src="dist/js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNHaVI3t7NVuuyfmLEL3UKdoH8AkGPT-g&libraries=places&callback=initMap"></script>
 
-
+  <div id="offline-status-box">
+    <p id="offline-status"></p>
+  </div>
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
