--- a/restaurant.html
+++ b/restaurant.html
@@ -56,12 +56,34 @@
     <!-- end restaurant -->
     <!-- Beginning reviews -->
     <section id="reviews-container">
+      <form id="reviews-form" action="#">
+        <legend>
+          <h4 id="form-legend">Share your thoughts with Us!</h4>
+        </legend>
+        <div class="input-container">
+          <label for="username">Name</label>
+          <input type="text" id="username" placeholder="Name..." required/>
+        </div>
+        <div class="input-container">
+          <label for="rating">Rating</label>
+          <input type="number" id="rating" min="0" max="10" placeholder="Rating..." required/>
+        </div>
+        <div class="input-container">
+          <label for="comment">Comment</label>
+          <textarea id="comment" placeholder="Your Message Goes Here...." required></textarea>
+        </div>
+        <div class="submit">
+          <button type="button" onclick="reviewFormHandler(); return false;">Submit</button>
+        </div>
+      </form>
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
   </main>
   <!-- End main -->
-
+  <div id="offline-status-box">
+    <p id="offline-status"></p>
+  </div>
   <!-- Beginning footer -->
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
@@ -74,7 +96,7 @@
   <!-- Main javascript file -->
   <script type="text/javascript" src="dist/js/restaurant_info.js"></script>
   <!-- Google Maps -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNHaVI3t7NVuuyfmLEL3UKdoH8AkGPT-g&libraries=places&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNHaVI3t7NVuuyfmLEL3UKdoH8AkGPT-g&libraries=places&callback=renderPage"></script>
   <!-- End scripts -->
 
 </body>
